tests/rosetta/out/Pascal/abc-problem.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/abc-problem.pas
abc-problem.pas(25,10) Error: Identifier not found "_sliceString"
abc-problem.pas(30,27) Error: Identifier not found "_appendList"
abc-problem.pas(30,51) Fatal: Syntax error, ")" expected but "," found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
